# qubic-core-lite

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml  linux-build.yml  release.yml  window-build.yml
cmake/: CompilerSetup.cmake
docker/ubuntu-env/: Dockerfile  README.md  configure-ssh-user.sh
src/: CMakeLists.txt  Qubic.vcxproj  common_buffers.h  private_settings.h  public_settings.h  qubic.cpp
src/K12/: kangaroo_twelve_xkcp.h
src/contract_core/: contract_def.h  contract_exec.h  qpi_mining_impl.h  qpi_proposal_voting.h
src/contracts/: QLoan.h  QReservePool.h  QThirtyFour.h  qpi.h
src/extensions/: empty_private_settings.h  k12_engine.h  overload.h  userfaultfd.h  utils.h  zipper.h
src/extensions/http/: http.h  utils.h
src/extensions/http/controller/: rpc_queryv2_controller.h
src/logging/: logging.h
src/network_core/: peers.h
src/platform/: concurrency.h  file_io.h  m256.h  memory_util.h  virtual_memory.h
src/spectrum/: spectrum.h
src/ticking/: pending_txs_pool.h  tick_storage.h
test/: CMakeLists.txt  assets.cpp  contract_testing.h  k12_engine.cpp  math_lib.cpp  pending_txs_pool.cpp  platform.cpp  qpi.cpp  qpi_collection.cpp  qpi_date_time.cpp  qpi_hash_map.cpp  read_write_lock.cpp  score.cpp  setjump.cpp  spectrum.cpp  test.vcxproj  virtual_memory.cpp
